[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/map/RandomWindow.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/icons/Ignore.tres" type="Resource" id=2]
[ext_resource path="res://resources/icons/Modify.tres" type="Resource" id=3]
[ext_resource path="res://src/battle/RewardWindowPost.tres" type="StyleBox" id=4]
[ext_resource path="res://resources/icons/Continue.tres" type="Resource" id=5]
[ext_resource path="res://src/random_events/SwapperEvent.gd" type="Script" id=6]
[ext_resource path="res://src/map/ModifyWindow.tscn" type="PackedScene" id=7]

[node name="SwapperEvent" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 6 )

[node name="IntroWindow" parent="." instance=ExtResource( 1 )]
title = "The Swapper"
description = "You come across a strange gypsy who claims they could perform a 'swapping' ritual."
option_names = [ "Offer a card", "Ignore" ]
option_icons = [ [ ExtResource( 3 ) ], [ ExtResource( 2 ) ] ]

[node name="IgnoreWindow" parent="." instance=ExtResource( 1 )]
visible = false
margin_top = 21.0
margin_bottom = 74.0
custom_styles/panel = ExtResource( 4 )
title = "Ignore"
description = "The swapper looks defeated."
option_names = [ "Continue" ]
option_icons = [ [ ExtResource( 5 ) ] ]

[node name="SwapWindow" parent="." instance=ExtResource( 7 )]
visible = false
title = "The Swap"
modify_type = 5

[node name="EndWindow" parent="." instance=ExtResource( 1 )]
visible = false
margin_top = 21.0
margin_bottom = 78.0
title = "Outro"
description = "The swapper hurries away, believing they have gotten the better end of the ritual."
option_names = [ "Continue" ]
option_icons = [ [ ExtResource( 5 ) ] ]

[connection signal="option_0_pressed" from="IntroWindow" to="." method="_on_IntroWindow_option_0_pressed"]
[connection signal="option_1_pressed" from="IntroWindow" to="." method="_on_IntroWindow_option_1_pressed"]
[connection signal="modification_finished" from="SwapWindow" to="." method="_on_SwapWindow_modification_finished"]
